--- a/src/app/core/components/loading/loading.component.html
+++ b/src/app/core/components/loading/loading.component.html
@@ -2,11 +2,11 @@
     <div class="text-center">
       <!-- Loading Animation -->
       <div class="flex space-x-2 mb-4">
-        <div class="w-3 h-8 bg-green-400 rounded-full animate-bounce "></div>
-        <div class="w-3 h-10 bg-green-500 rounded-full animate-bounce"></div>
-        <div class="w-3 h-12 bg-green-600 rounded-full animate-bounce "></div>
-        <div class="w-3 h-10 bg-green-500 rounded-full animate-bounce "></div>
-        <div class="w-3 h-8 bg-green-400 rounded-full animate-bounce "></div>
+        <div class="w-3 h-8 bg-spotify-green-lighter rounded-full animate-bounce "></div>
+        <div class="w-3 h-10 bg-spotify-green-lighter rounded-full animate-bounce"></div>
+        <div class="w-3 h-12 bg-spotify-green-lighter rounded-full animate-bounce "></div>
+        <div class="w-3 h-10 bg-spotify-green-lighter rounded-full animate-bounce "></div>
+        <div class="w-3 h-8 bg-spotify-green-lighter rounded-full animate-bounce "></div>
       </div>
   
       <!-- Loading Text
