--- a/src/app/core/views/artist-page/artist-page.component.html
+++ b/src/app/core/views/artist-page/artist-page.component.html
@@ -1,5 +1,5 @@
 <!-- artist-page.component.html -->
-<div class="bg-[#121212] text-white h-full overflow-y-auto p-6 md:p-8" *ngIf="!isLoading && !error">
+<div class="bg-black text-white h-full overflow-y-auto p-6 md:p-8" *ngIf="!isLoading && !error">
     <!-- Artist Header -->
     <div class="flex flex-col md:flex-row items-start gap-6 mb-8">
       <img [src]="artist.images[0]?.url" 
@@ -54,7 +54,7 @@
       <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-4">
         <div *ngFor="let album of albums" 
              [routerLink]="['/album', album.id]" 
-             class="p-4 bg-[#181818] rounded hover:bg-[#282828] cursor-pointer">
+             class="p-4 bg-spotify-black rounded hover:bg-[#282828] cursor-pointer">
          @if(album.images){
             <img [src]="album.images[0].url" 
             alt="{{ album.name }}" 
@@ -71,12 +71,12 @@
   </div>
   
   <!-- Loading State -->
-  <div *ngIf="isLoading" class="bg-[#121212] text-white min-h-screen flex items-center justify-center">
+  <div *ngIf="isLoading" class="bg-black text-white min-h-screen flex items-center justify-center">
     <app-loading></app-loading>
   </div>
   
   <!-- Error State -->
-  <div *ngIf="error" class="bg-[#121212] text-white min-h-screen flex items-center justify-center">
+  <div *ngIf="error" class="bg-black text-white min-h-screen flex items-center justify-center">
     <div class="text-center">
       <i class="fas fa-exclamation-triangle text-4xl mb-4 text-red-500"></i>
       <p class="text-xl">{{ error }}</p>
