--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,15 +2,14 @@
 @if (this.AuthService.isLoggedIn()) {
   <!-- Check if the device is not mobile -->
   @if (!isMobile()) {
-    <div class="flex flex-col h-screen w-screen bg-spotify-auth-black overflow-hidden">
+    <div class="flex flex-col max-h-screen h-screen w-screen bg-spotify-auth-black overflow-hidden">
       <!-- Header -->
       <app-header ></app-header>
 
       <!-- Main Content -->
-      <main class="flex flex-row h-[80%] w-full  bg-black px-2 py-1">
+      <main class="flex  flex-row h-[80%] w-full  bg-black px-2 py-1">
         <!-- Sidebar -->
         <app-sidebar class="flex flex-col h-full mr-1">
-          <app-list-a class="flex flex-col h-full overflow-y-auto"></app-list-a>
         </app-sidebar>
 
         <!-- Router Outlet -->
@@ -27,20 +26,20 @@
      
     </div>
   } @else { <!-- Device is mobile -->
-    <div class="flex flex-col max-h-screen h-screen w-full bg-spotify-auth-black">
+    <div class="flex flex-col max-h-screen h-screen w-full bg-spotify-black">
       <!-- Header -->
-      <app-header ></app-header>
+      <app-header class="fixed w-full z-10 top-0" ></app-header>
 
       <!-- Main Content -->
-      <main class=" h-full w-full space-x-1 bg-black">
+      <main class="h-[80%] translate-y-20 w-full space-x-1 bg-black">
         <!-- Router Outlet -->
-        <div class="bg-spotify-shadeBlack text-spotify-gray h-full w-fulltransition-all duration-250 relative">
+        <div class="bg-spotify-shadeBlack text-spotify-gray w-full h-full transition-all duration-250 relative">
           <router-outlet></router-outlet>
         </div>
       </main>
 
       <!-- Footer -->
-      <app-footer  class=""></app-footer>
+      <app-footer  class=" "></app-footer>
     </div>
   }
 } @else { <!-- User is not logged in -->
